--- a/report_data_semantics/capitolo5.tex
+++ b/report_data_semantics/capitolo5.tex
@@ -1,9 +1,43 @@
 \chapter{Pattern Mining}
 \label{ch:capitolo2}
-To perform this task, continuous attributes were discretized based on their distributions, 
+% To perform this task, continuous attributes were discretized based on their distributions, 
+% aiming for bins that were both semantically meaningful and reasonably balanced in size. 
+% The selected numerical attributes (not normalized) for the pattern mining task, along with their binning, are the following: \\ \\ 
+% \begin{table}[H]
+% \centering
+% \begin{tabular}{ll}
+% \toprule
+% \textbf{Attribute} & \textbf{Binning} \\
+% \midrule
+% \texttt{runtimeMinutes} & VeryLowRTM (1-30), LowRTM (31-60), MediumRTM (61-90), HighRTM (91-220) \\
+% \texttt{rating} & VeryLowR (1-3), LowR (4-6), MediumR (7), HighR (8), VeryHighR (9-10) \\
+% \texttt{totalCredits} & VeryLowC (0-15), LowC (16-35), MediumC (36-65), HighC (66-15742) \\
+% \bottomrule
+% \end{tabular}
+% \caption{Binning of the continuous attributes}
+% \end{table}
+% Regarding discrete attributes, \texttt{titleType} was considered for this task, kept in its original form. 
+% On the other hand, the values of each of the 7 attributes \texttt{countryOfOrigin\_[continent code]}\footnote{see subsection 1.1.3 for the list of the features} were binarized into:
+% \begin{itemize}
+%     \item \texttt{not\_from\_[continent code]}: when the value of the attribute is 0
+%     \item \texttt{is\_from\_[continent code]}: when the value of the attribute is $\geq$ 1
+% \end{itemize}
+% Binarization was preferred over creation of multiple bins, as it allows for a more linear interpretation of the results. 
+% An attempt was performed to include genres; however, this did not lead to more interesting results.
+
+To perform this task, some attributes needed preprocessing. As for discrete features, the values of each of the 7 attributes \texttt{countryOfOrigin\_[continent code]}\footnote{see subsection 1.1.3 for the list of the features} were binarized into:
+\begin{itemize}
+    \item \texttt{not\_from\_[continent code]}: when the value of the attribute is 0
+    \item \texttt{is\_from\_[continent code]}: when the value of the attribute is $\geq$ 1
+\end{itemize}
+Binarization was preferred over creation of multiple bins, as it allows for a more linear interpretation of the results. 
+On the other hand, \texttt{titleType} was kept in its original form.  An attempt was performed to include genres; however, this did not lead to more interesting results.
+\\
+
+Regarding continuous attributes, they were discretized based on their distributions, 
 aiming for bins that were both semantically meaningful and reasonably balanced in size. 
-The selected numerical attributes (not normalized) for the pattern mining task, along with their binning, are:
-\begin{table}[h]
+The selected numerical attributes (not normalized) for the pattern mining task, along with their binning, are the following:
+\begin{table}[H]
 \centering
 \begin{tabular}{ll}
 \toprule
@@ -15,15 +49,7 @@ The selected numerical attributes (not normalized) for the pattern mining task, 
 \bottomrule
 \end{tabular}
 \caption{Binning of the continuous attributes}
-\end{table}\\
-Regarding discrete attributes, \texttt{titleType} was considered for this task, kept in its original form. 
-On the other hand, the values of each of the 7 attributes \texttt{countryOfOrigin\_[continent code]}\footnote{see subsection 1.1.3 for the list of the features} were binarized into:
-\begin{itemize}
-    \item \texttt{not\_from\_[continent code]}: when the value of the attribute is 0
-    \item \texttt{is\_from\_[continent code]}: when the value of the attribute is $\geq$ 1
-\end{itemize}
-Binarization was preferred over creation of multiple bins, as it allows for a more linear interpretation of the results. 
-An attempt was performed to include genres; however, this did not lead to more interesting results.
+\end{table}
 
 \section{Extraction and discussion of frequent patterns}\label{sec:freq_patterns}
 \begin{figure}[H]
@@ -50,7 +76,6 @@ An attempt was performed to include genres; however, this did not lead to more i
 \textit{Apriori} was the algorithm chosen to extract frequent patterns. 
 Figure~\ref{fig:min_sup} shows how the number of frequent itemsets changes with support values ranging from 0.01 to 0.18. 
 The curve of the plot begins to flatten between 0.08 and 0.1, so a support value of 0.08 was selected, resulting in 66 frequent patterns.\\
-
 It is interesting to observe the top frequent itemsets of size 1, 2, and 3, as shown in Table~\ref{tab:top-itemsets}. 
 From the itemset of size 1 it was noticed that approximately 48.5\% of the objects in the dataset are from North America, highlighting the prevalence of this region.
 
@@ -121,8 +146,6 @@ a significant number of rules, i.e. 18. The top 10 rules extracted (ranked by li
 \end{tabular}
 \caption{Top 10 rules extracted with \textit{Apriori} (ranked by lift)}
 \end{table}
-
-
 \section{Exploiting rules for target prediction}\label{sec:prediction_rules}
 One way to exploit the previously extracted rules is for target prediction. 
 Firstly, rules with \texttt{VeryLowC} as target (rows 6 and 7 in the Table 5.3), show that short contents with very low runtime are highly likely to be associated with very low credits, 
